tests/fail/semantics/use_before_initialization/main.kira
@Main
function entry() {
    var value: String
    print(value)
    return
}

